<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/browse"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sell_your_stuff" ></item>
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/chat"  />
        <item
            android:id="@+id/nav_notifaction"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:title="@string/categories"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_profile"/>
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/invite_facebook_friends"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help"/>
    </group>



</menu>
