<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:orientation="vertical" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/upload_your_item_to_letgo" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="93dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_menu_camera" />


    <ImageView

        android:id="@+id/mUserImage"

        android:layout_width="174dp"

        android:layout_height="188dp"

        android:layout_gravity="center"

        android:layout_marginTop="10dp"

        android:src="@drawable/icon" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"

            android:layout_height="match_parent"

            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="20"
                android:hint="@string/title_optional"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="1500"
                android:hint="@string/description_optional"
                android:inputType="textMultiLine" />

            <Spinner
                android:id="@+id/coin_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:hint="@string/enter_price"
                android:inputType="number" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/choose_category"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/editText44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="20"
                android:hint="@string/location"
                android:inputType="textPersonName" />



        </LinearLayout>

        <Button
            android:background="@color/lightRed"
            android:textColor="#ffff"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_publish" />

    </android.support.v7.widget.CardView>


</LinearLayout>