<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:fillViewport="true"
    tools:ignore="RtlHardcoded">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/item_title"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/black"
          android:layout_marginLeft="20dp"
          android:text="@string/item_name_ss"
          android:layout_height="wrap_content" >
      </TextView>

      <TextView
          android:id="@+id/name"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/red"
          android:layout_marginLeft="20dp"
          android:layout_height="wrap_content" >
      </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/item_cat"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/black"
          android:layout_marginLeft="20dp"
          android:text="@string/category"
          android:layout_height="wrap_content" >
      </TextView>

      <TextView
          android:id="@+id/category"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/red"
          android:layout_marginLeft="20dp"
          android:layout_height="wrap_content" >
      </TextView>

    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/item_des"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/black"
          android:layout_marginLeft="20dp"
          android:text="@string/description1"
          android:layout_height="wrap_content" >
      </TextView>

      <TextView
          android:id="@+id/description"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/red"
          android:layout_marginLeft="20dp"
          android:layout_height="wrap_content" >
      </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/item_price"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/black"
          android:layout_marginLeft="20dp"
          android:text="@string/price"
          android:layout_height="wrap_content" >
      </TextView>

      <TextView
          android:id="@+id/price"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/red"
          android:layout_marginLeft="20dp"
          android:layout_height="wrap_content" >
      </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/item_location"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/black"
          android:layout_marginLeft="20dp"
          android:text="@string/location"
          android:layout_height="wrap_content" >
      </TextView>

      <TextView
          android:id="@+id/location"
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/red"
          android:layout_marginLeft="20dp"
          android:layout_height="wrap_content" >
      </TextView>

    </LinearLayout>

  </LinearLayout>



</ScrollView>

